kubernetes/argocd/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sabnzbd
  name: sabnzbd
  namespace: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: ghcr.io/hotio/sabnzbd:latest
          ports:
          - name: sabnzbd-tcp
            containerPort: 8080
            protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: data-volume
              mountPath: /data
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: sabnzbd-pvc-config
      - name: data-volume
        persistentVolumeClaim:
          claimName: sabnzbd-pvc-data
