kubernetes/argocd/sabnzbd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: sabnzbd
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
    cert-manager.io/cluster-issuer: star-home-neels-tech-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sabnzbd.home.neels.tech`)
      services:
        - name: sabnzbd-tcp
          port: 80
  tls:
    secretName: sabnzbd-home-neels-tech-tls
